# ToPG

./: README.md  REUSE.toml  pyproject.toml
LICENSES/: LicenseRef-Idiap.txt
notebooks/: agent_example.ipynb
reproduce/: README.md
reproduce/data/indexing/demonstrations-indexing/HotPotQA-MusiQue-PopQA/: demo_hyperproposition_with_ner.json  demo_ner.json
reproduce/data/indexing/demonstrations-indexing/Novel/: demo_hyperproposition_with_ner.json  demo_ner.json
reproduce/data/indexing/demonstrations-indexing/agriculture/: demo_hyperproposition_with_ner.json  demo_ner.json
reproduce/data/indexing/demonstrations-indexing/cs/: demo_hyperproposition_with_ner.json  demo_ner.json
reproduce/data/indexing/demonstrations-indexing/legal/: demo_hyperproposition_with_ner.json  demo_ner.json
reproduce/data/indexing/demonstrations-indexing/medical/: demo_hyperproposition_with_ner.json  demo_ner.json
reproduce/data/indexing/prompts/: cs.py  legal.py  medical.py  novel.py
reproduce/data/questions-UltraDomain/: agriculture.json  cs.json  legal.json  sample_agriculture.json
topg/: __init__.py  topg.py
topg/builders/: chunking.py  communities.py  hybrid_vector_concept_db.py  sql_db.py  storage.py
topg/builders/llm_modules/: hypergraph_extractor.py
topg/evaluation/: metrics.py
topg/rag/: __init__.py  global_query.py  hybrid_rag.py  local_query.py  naive_query.py  query_manager.py  utils.py
topg/utils/: llm.py  logger.py  models.py
